--- a/index.html
+++ b/index.html
@@ -1,9 +1,75 @@
-<html>
- 
-<body>
-  <h1>Griffin East</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Griffin East Portfolio</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+</head>
+<body class="body">
+  <div class="navbar">
+      <a href="#" class=""><img src="images/east-compass-blue.svg" loading="lazy" height="75" alt="" class="image-2"></a>
+      <nav role="navigation" class="">
+        <a href="#tech-stack" class="nav-link">Tech Stack</a>
+        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#contact" class="nav-link">Contact</a>
+      </nav>
+  </div>
+  <section class="section ">
+    <div class="container">
+      <h1 class="big-heading">Hello World</h1>
+      <p class="hero-paragraph">I&#x27;m Griffin East, a novice web developer based in Fort Myers, Florida. My expertise lies in creating stunning and intuitive websites, merging my proficiency in both front-end and back-end development to deliver extraordinary digital experiences that engage and inspire users.</p>
+      <img id="headshot" src="images/Untitled-design-1-1.jpg" loading="lazy" width="188" sizes="188px" alt="Headshot of Griffin East" srcset="images/Untitled-design-1-1.jpg 500w, images/Untitled-design-1-1.jpg 600w" class="image-3">
+    </div>
+  </section>
+  <section class="section-2">
+    <h1 id="tech-stack" class="heading-3">Technologies I work with</h1>
+    <p class="paragraph">In my web development journey, I harness an array of powerful technologies to build exceptional websites. I leverage Java to create robust and scalable back-end solutions, while utilizing PostgreSQL as a reliable and efficient database management system. To breathe life into the user interface, I employ HTML and CSS to craft visually appealing layouts and styles, and JavaScript to add interactivity and dynamic functionality. Additionally, I embrace the versatility of Vue.js, an advanced JavaScript framework, to develop cutting-edge and responsive web applications that seamlessly adapt to various devices and screen sizes.</p>
+    <div class="w-layout-blockcontainer container-4 w-container"><img src="images/java-logo-blue.svg" loading="lazy" height="100" alt=""><img src="images/postgresql-logo-blue-copy.svg" loading="lazy" height="100" alt=""><img src="images/vue-blue-1-copy.svg" loading="lazy" height="100" alt=""></div>
+  </section>
+  <section id="projects">
+    <h1 class="heading-4">Featured Projects</h1>
+    <div class="w-layout-blockcontainer w-container">
+      <ul role="list" class="w-list-unstyled">
+        <li>
+          <div class="text-block"><a href="https://github.com/griffineast/race-registration-form" target="_blank">Race Registration Form</a> - One of my earliest projects where I used basic HTML &amp; CSS to create a registration form for an imaginary running race.</div>
+        </li>
+        <li>
+          <div class="text-block-2"><a href="https://github.com/griffineast/instagram-followers-tracker" target="_blank">Instagram Followers Tracker</a> - A node.js app I built with pure JavaScript to track who is not following you back on Instagram.</div>
+        </li>
+        <li>
+          <div class="text-block-3"><a href="https://github.com/griffineast/Workout-Builder" target="_blank">Fitness Web App</a> - A full stack Vue.js app I built with three teammates. It is an app for both users and personal trainers to build custom workouts and track workout history.</div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="footer-subscribe" id="contact">
+    <div class="container-5">
+      <div class="footer-form-two">
+        <form id="wf-form-Footer-Form-Two" name="wf-form-Footer-Form-Two" data-name="Footer Form Two" method="get" class="footer-form-container-two" data-wf-page-id="649c3c8e790a530f08e767d0" data-wf-element-id="3ac13d3c-14c4-2d76-87b8-9c8be77c6df0">
+          <div class="footer-form-title">Let&#x27;s get in touch</div>
+          <p class="paragraph-2">Feel free to call, text, or connect on LinkedIn or GitHub</p>
+        </form>
+      </div>
+      <div class="footer-wrapper-three">
+        <div class="footer-block-three">
+          <a href="#" class="footer-link-three">(239) 410-1285</a>
+          <a href="#" class="footer-link-three">griffineast1@gmail.com</a>
+        </div>
+        <div class="footer-social-block-three">
+          <a href="https://github.com/griffineast" target="_blank" class="footer-social-link-three w-inline-block"><img src="images/github-mark.svg" loading="lazy" height="30" alt=""></a>
+          <a href="https://www.linkedin.com/in/griffineast/" target="_blank" class="footer-social-link-three w-inline-block"><img src="images/linkedinlogo.svg" loading="lazy" height="30" alt=""></a>
+        </div>
+      </div>
+      <div class="footer-divider-two"></div>
+      <div class="footer-bottom">
+        <div class="footer-copyright">© 2022 Griffin East. All rights reserved</div>
+        <div class="footer-legal-block">
+          <a href="#" class="footer-legal-link">Terms Of Use</a>
+          <a href="#" class="footer-legal-link">Privacy Policy</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
- 
 </html>
