--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Griffin East Portfolio</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body class="body">
   <div class="navbar">
